# file-services-backend

./: .description.md  .gitignore  .mandatory_files  .pre-commit-config.yaml  .static_files  Dockerfile  Dockerfile.dhi  README.md  config_schema.json  example_config.yaml  monorepo.code-workspace  openapi.yaml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.cfg  template-Dockerfile
projects/irs/: pyproject.toml
projects/irs/.dev/: pyproject_custom.toml
projects/irs/src/irs/: __main__.py
services/dcs/: .pre-commit-config.yaml  Dockerfile  README.md  config_schema.json  dev_config.yaml  example_config.yaml  openapi.yaml  pyproject.toml
services/dcs/.devcontainer/: dev_launcher
services/dcs/.readme_generation/: description.md
services/dcs/scripts/: app_openapi.py
services/dcs/scripts/script_utils/: fastapi_app_location.py
services/dcs/src/dcs/: __init__.py  __main__.py  cli.py  config.py  constants.py  inject.py  main.py  migrations.py
services/dcs/tests/: test_typical_journey.py
services/dcs/tests/fixtures/: config.py  joint.py
services/dcs/tests_dcs/: conftest.py  test_dlq.py  test_edge_cases.py  test_migrations.py  test_otel.py  test_outbox_dao.py  test_outbox_subscriber.py  test_typical_journey.py  test_v3_migration.py
services/dcs/tests_dcs/fixtures/: __init__.py  config.py  joint.py  test_config.yaml  utils.py
services/dcs/tests_dcs/migrations/: __init__.py  test_v3.py  v3_test_data.py
services/ekss/: Dockerfile  README.md  config_schema.json  dev_config.yaml  example_config.yaml  openapi.yaml  pyproject.toml
services/ekss/.devcontainer/: dev_launcher
services/ekss/.pyproject_generation/: pyproject_custom.toml
services/ekss/.readme_generation/: description.md
services/ekss/lock/: requirements-dev.txt  requirements.txt
services/ekss/scripts/: app_openapi.py
services/ekss/src/ekss/: __init__.py  __main__.py  config.py  constants.py  inject.py  main.py
services/ekss/tests/fixtures/: file.py  vault.py
services/ekss/tests/integration/: test_post_endpoint.py
services/ekss/tests/unit/: test_api.py  test_upload.py  test_vault_interaction.py
services/ekss/tests_ekss/: conftest.py
services/ekss/tests_ekss/fixtures/: __init__.py  client.py  config.py  envelope.py  file.py  keypair.py  test.pub  test.sec  test_config.yaml  utils.py  vault.py
services/ekss/tests_ekss/integration/: test_api_integrated.py  test_get_endpoint.py  test_otel.py  test_post_endpoint.py
services/ekss/tests_ekss/unit/: test_api.py  test_config_validators.py  test_secrets.py  test_upload.py  test_vault_interaction.py
services/fins/: README.md  config_schema.json  dev_config.yaml  example_config.yaml  openapi.yaml  pyproject.toml
services/fins/.readme_generation/: description.md
services/fins/scripts/: app_openapi.py
services/fins/src/fins/: __main__.py  cli.py  config.py  inject.py  main.py
services/fins/tests_fins/: test_typical_journey.py
services/fins/tests_fins/fixtures/: config.py  joint.py
services/fins/tests_fis/: conftest.py  test_ingest.py  test_outbox_dao.py
services/fis/: Dockerfile  README.md  config_schema.json  dev_config.yaml  example_config.yaml  openapi.yaml  pyproject.toml
services/fis/.devcontainer/: docker-compose.yml
services/fis/.readme_generation/: description.md
services/fis/lock/: requirements-dev.txt  requirements.txt
services/fis/scripts/: app_openapi.py  compare_class_defs.py
services/fis/scripts/script_utils/: fastapi_app_location.py
services/fis/src/fis/: __init__.py  __main__.py  cli.py  config.py  constants.py  inject.py  main.py  opentelemetry.py
services/fis/tests/: test_ingest.py
services/fis/tests_fis/: conftest.py  test_api_call.py  test_ingest.py  test_migrations.py  test_outbox_dao.py
services/fis/tests_fis/fixtures/: config.py  joint.py  test_config.yaml  utils.py
services/fis/tests_fis/integration/: __init__.py  test_core.py  test_migrations.py  test_otel.py  test_outbox_sub.py
services/fis/tests_fis/unit/: __init__.py  (+5 more)
services/ifrs/: Dockerfile  README.md  config_schema.json  dev_config.yaml  example_config.yaml  pyproject.toml
services/ifrs/.dev/: pyproject_custom.toml
services/ifrs/.devcontainer/: Dockerfile  dev_install  devcontainer.json
services/ifrs/.readme_generation/: description.md
services/ifrs/tests/: test_edge_cases.py  test_typical_journey.py
services/ifrs/tests_ifrs/: conftest.py  test_dlq.py  test_edge_cases.py  test_ifrs_edge_cases.py  test_ifrs_typical_journey.py  test_migrations.py  test_otel.py  test_outbox_subscriber.py  test_typical_journey.py
services/irs/: Dockerfile  README.md  config_schema.json  dev_config.yaml  example_config.yaml  pyproject.toml
services/irs/.devcontainer/: Dockerfile  dev_install  devcontainer.json
services/irs/tests/: test_cli.py  test_event_handling.py
services/irs/tests_irs/: __init__.py  conftest.py  test_cli.py  test_dlq.py  test_event_handling.py  test_outbox_dao.py  test_outbox_subscriber.py  test_republish.py
services/pcs/: Dockerfile  README.md  config_schema.json  dev_config.yaml  example_config.yaml  openapi.yaml  pyproject.toml
services/pcs/.dev/: .dev_config.yaml  app_openapi.py
services/pcs/.devcontainer/: Dockerfile  devcontainer.json
services/pcs/lock/: requirements.txt
services/pcs/scripts/: app_openapi.py
services/pcs/tests/: test_journey.py  test_typical_journey.py
services/pcs/tests_pcs/: conftest.py  test_journey.py  test_migrations.py  test_otel.py  test_republish.py  test_typical_journey.py
services/ucs/: Dockerfile  README.md  config_schema.json  dev_config.yaml  example_config.yaml  openapi.yaml  pyproject.toml
services/ucs/lock/: requirements-dev.txt
services/ucs/scripts/: app_openapi.py
services/ucs/tests_ucs/: conftest.py  test_api.py  test_api_auth.py  test_controller.py  test_dlq.py  test_edge_cases.py  test_outbox_dao.py  test_republish.py  test_typical_journey.py
src/dcs/: __main__.py  cli.py  config.py  container.py  inject.py  main.py  pyproject.toml  utils.py
src/dcs/core/: auth_policies.py  data_repository.py  models.py
(+588 files in other folders)
