[project]
name = "fsb"
version = "5.1.0"
description = "File Services Backend - monorepo housing file services"
dependencies = [
    "typer >= 0.15",
    "ghga-service-commons[api, auth, crypt] >= 4.1",
    "ghga-event-schemas >= 5.0",
    "hexkit[akafka, s3, mongodb, opentelemetry] >= 5.3",
    "crypt4gh >= 1.7",
    "hvac >= 2",
    "httpx >= 0.28",
]
readme = "README.md"
authors = [
    { name = "German Human Genome Phenome Archive (GHGA)", email = "contact@ghga.de" },
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
]

[project.urls]
Repository = "https://github.com/ghga-de/file-services-backend"

[project.license]
text = "Apache 2.0"

[tool.ruff]
exclude = [
    ".git",
    ".devcontainer",
    "__pycache__",
    "build",
    "dist",
]
line-length = 88
src = [
    "services/**/src",
    "services/**/tests_*",
    "examples",
    "scripts",
]
target-version = "py312"

[tool.ruff.lint]
fixable = [
    "UP",
    "I",
    "D",
    "RUF022",
]
ignore = [
    "E111",
    "E114",
    "E116",
    "PLW",
    "RUF001",
    "RUF010",
    "RUF012",
    "N818",
    "B008",
    "PLR2004",
    "D205",
    "D400",
    "D401",
    "D107",
    "D206",
    "D300",
    "UP040",
    "PLC0206",
]
select = [
    "C90",
    "F",
    "I",
    "S",
    "B",
    "N",
    "UP",
    "PL",
    "RUF",
    "SIM",
    "D",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"scripts/*" = [
    "PL",
    "S",
    "SIM",
    "D",
]
"services/**/tests_*" = [
    "S",
    "SIM",
    "PLR",
    "B011",
]
".devcontainer/*" = [
    "S",
    "SIM",
    "D",
]
"examples/*" = [
    "S",
    "D",
]
"__init__.py" = [
    "D",
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.mypy]
disable_error_code = "import"
show_error_codes = true
exclude = [
    "build/lib/",
]
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_site_packages = false
explicit_package_bases = true

[tool.pytest.ini_options]
minversion = "8.3"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.paths]
source = [
    "services/**/src",
    "/workspace/services/**/src",
    "**/lib/python*/site-packages",
]
