# Copyright 2021 - 2022 Universität Tübingen, DKFZ and EMBL
# for the German Human Genome-Phenome Archive (GHGA)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = dcs
version = attr: dcs.__version__
description = dcs - a GA4GH drs compliant service for delivering files from S3
url = https://github.com/ghga-de/dcs
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = German Human Genome Phenome Archive (GHGA)
author_email = contact@ghga.de
license = Apache 2.0
classifiers =
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    ghga-service-chassis-lib[api,pubsub,postgresql,s3]==0.14.3
    ghga-message-schemas==0.3.1
    pyramid==2.0
    pyramid_beaker==0.8
    pyramid_openapi3==0.11
    openapi-core==0.13.8

python_requires = >= 3.9

[options.package_data]
* = *.yaml, *.json, *.html

[options.entry_points]
console_scripts =
    dcs = dcs.__main__:run

[options.extras_require]
dev =
    ghga-service-chassis-lib[dev]==0.14.3
    webtest
db_migration =
    alembic==1.6.5
all =
    %(dev)s
    %(db_migration)s


[options.packages.find]
exclude = tests
