[build-system]
requires = [
    "setuptools>=67.7.2",
]
build-backend = "setuptools.build_meta"

[project]
readme = "README.md"
authors = [
    { name = "German Human Genome Phenome Archive (GHGA)", email = "contact@ghga.de" },
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
]
name = "irs"
version = "2.1.0"
description = "Interrogation Room Service"
dependencies = [
    "typer >= 0.9.0",
    "ghga-service-commons[api] >= 3.0.0, <4",
    "ghga-event-schemas >= 3.0.0, <4",
    "hexkit[akafka,s3,mongodb] >= 2, <3",
    "crypt4gh>=1.6",
]


[project.license]
text = "Apache 2.0"

[project.urls]
Repository = "https://github.com/ghga-de/interrogation-room-service"

[project.scripts]
irs = "irs.__main__:cli"

[tool.setuptools.packages.find]
where = [
    "src",
]
