[build-system]
requires = [
    "setuptools>=69",
]
build-backend = "setuptools.build_meta"

[project]
readme = "README.md"
authors = [
    { name = "German Human Genome Phenome Archive (GHGA)", email = "contact@ghga.de" },
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
]
name = "fins"
version = "1.0.0"
description = "File Information Service - Providing public metadata about files registered with the Internal File Registry"

[project.license]
text = "Apache 2.0"

[project.urls]
Repository = "https://github.com/ghga-de/file-backend-services/services/fins"

[project.scripts]
fins = "fins.__main__:run"

[tool.setuptools.packages.find]
where = [
    "src",
]
