[build-system]
requires = ["setuptools>=80.9"]
build-backend = "setuptools.build_meta"

[project]
name = "ifrs"
version = "6.0.3"
description = "Internal File Registry Service - This service acts as a registry for the internal location and representation of files."
readme = "README.md"
authors = [
    { name = "German Human Genome Phenome Archive (GHGA)", email = "contact@ghga.de" },
]
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
]

[project.urls]
Repository = "https://github.com/ghga-de/file-services-backend/tree/main/services/ifrs"

[project.scripts]
ifrs = "ifrs.__main__:cli"

[project.license]
text = "Apache 2.0"

[tool.setuptools.packages.find]
where = [
    "src",
]
