[build-system]
requires = [
    "setuptools>=69",
]
build-backend = "setuptools.build_meta"

[project]
name = "pcs"
version = "4.0.1"
description = "Purge Controller Service - a service to commission file deletions"
readme = "README.md"
authors = [
    { name = "German Human Genome Phenome Archive (GHGA)", email = "contact@ghga.de" },
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
]

[project.urls]
Repository = "https://github.com/ghga-de/file-services-backend/tree/main/services/pcs"

[project.scripts]
pcs = "pcs.__main__:cli"

[project.license]
text = "Apache 2.0"

[tool.setuptools.packages.find]
where = [
    "src",
]
